myems-web/src/assets/scss/_user.scss
// 
// 
// user.scss
//
// Place your own theme CSS or SCSS rules below this line, these rules will override any Bootstrap and theme variables.
.rc-cascader {
  font-size: 12px;
}
.rc-cascader-menus {
  font-size: 12px;
  overflow: hidden;
  background: #fff;
  position: absolute;
  border: 1px solid #d9d9d9;
  border-radius: 6px;
  box-shadow: 0 0 4px rgba(0, 0, 0, 0.17);
  white-space: nowrap;
  z-index: 2000;
}
.rc-cascader-menus-hidden {
  display: none;
}
.rc-cascader-menus.slide-up-enter,
.rc-cascader-menus.slide-up-appear {
  animation-duration: .3s;
  animation-fill-mode: both;
  transform-origin: 0 0;
  opacity: 0;
  animation-timing-function: cubic-bezier(0.08, 0.82, 0.17, 1);
  animation-play-state: paused;
}
.rc-cascader-menus.slide-up-leave {
  animation-duration: .3s;
  animation-fill-mode: both;
  transform-origin: 0 0;
  opacity: 1;
  animation-timing-function: cubic-bezier(0.6, 0.04, 0.98, 0.34);
  animation-play-state: paused;
}
.rc-cascader-menus.slide-up-enter.slide-up-enter-active.rc-cascader-menus-placement-bottomLeft,
.rc-cascader-menus.slide-up-appear.slide-up-appear-active.rc-cascader-menus-placement-bottomLeft {
  animation-name: SlideUpIn;
  animation-play-state: running;
}
.rc-cascader-menus.slide-up-enter.slide-up-enter-active.rc-cascader-menus-placement-topLeft,
.rc-cascader-menus.slide-up-appear.slide-up-appear-active.rc-cascader-menus-placement-topLeft {
  animation-name: SlideDownIn;
  animation-play-state: running;
}
.rc-cascader-menus.slide-up-leave.slide-up-leave-active.rc-cascader-menus-placement-bottomLeft {
  animation-name: SlideUpOut;
  animation-play-state: running;
}
.rc-cascader-menus.slide-up-leave.slide-up-leave-active.rc-cascader-menus-placement-topLeft {
  animation-name: SlideDownOut;
  animation-play-state: running;
}
.rc-cascader-menu {
  display: inline-block;
  height: 192px;
  list-style: none;
  margin: 0;
  padding: 0;
  border-right: 1px solid #e9e9e9;
  overflow: auto;
}
.rc-cascader-menu:last-child {
  border-right: 0;
}
.rc-cascader-menu-item {
  height: 32px;
  line-height: 32px;
  padding: 0 16px;
  cursor: pointer;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  transition: all 0.3s ease;
  position: relative;
}
.rc-cascader-menu-item:hover {
  background: #eaf8fe;
}
.rc-cascader-menu-item-disabled {
  cursor: not-allowed;
  color: #ccc;
}
.rc-cascader-menu-item-disabled:hover {
  background: transparent;
}
.rc-cascader-menu-item-loading:after {
  position: absolute;
  right: 12px;
  content: 'loading';
  color: #aaa;
  font-style: italic;
}
.rc-cascader-menu-item-active {
  background: #d5f1fd;
}
.rc-cascader-menu-item-active:hover {
  background: #d5f1fd;
}
.rc-cascader-menu-item-expand {
  position: relative;
}
.rc-cascader-menu-item-expand-icon {
  font-size: 12px;
  color: #999;
  position: absolute;
  right: 16px;
  line-height: 32px;
}
@keyframes SlideUpIn {
  0% {
    opacity: 0;
    transform-origin: 0% 0%;
    transform: scaleY(0.8);
  }
  100% {
    opacity: 1;
    transform-origin: 0% 0%;
    transform: scaleY(1);
  }
}
@keyframes SlideUpOut {
  0% {
    opacity: 1;
    transform-origin: 0% 0%;
    transform: scaleY(1);
  }
  100% {
    opacity: 0;
    transform-origin: 0% 0%;
    transform: scaleY(0.8);
  }
}
@keyframes SlideDownIn {
  0% {
    opacity: 0;
    transform-origin: 0% 100%;
    transform: scaleY(0.8);
  }
  100% {
    opacity: 1;
    transform-origin: 0% 100%;
    transform: scaleY(1);
  }
}
@keyframes SlideDownOut {
  0% {
    opacity: 1;
    transform-origin: 0% 100%;
    transform: scaleY(1);
  }
  100% {
    opacity: 0;
    transform-origin: 0% 100%;
    transform: scaleY(0.8);
  }
}


@keyframes flow {
  from {
    stroke-dashoffset: 0;
  }
  to {
    stroke-dashoffset: 12;
  }
}

.flow {
  animation: ball-flow 2s linear infinite;
}

.flow-reverse {
  animation: ball-flow 2s linear reverse infinite;
}

@keyframes ball-flow {
  from {
    offset-distance: 0%;
  }
  to {
    offset-distance: 100%;
  }
}

.rs-btn,

.rs-picker-toggle-textbox {color: $gray-800; font-family: sans-serif;}

.rs-picker-toggle-value{font-size: 14px;line-height: 20px;color: $gray-900!important;}

.rs-picker-has-value,
.rs-picker-disabled,


.rs-picker-disabled{--rs-input-disabled-bg: $gray-900}

.rs-picker-daterange-header{color: $gray-900 !important;}

.rs-picker-input,
.rs-picker-toggle {--rs-input-bg:$white;background-color: $white;border: 1px solid $white !important;}


.rs-picker-menu {background-color: $white;}
.rs-picker-default {--rs-input-bg:$white;background-color: $white;border: 1px solid $gray-300 !important;}

.rs-btn-active,
.rs-picker-default:not(.rs-picker-disabled),
.rs-btn:focus, 
.rs-btn:hover, 
.rs-picker-toggle-active,
.rs-picker-toggle:focus,
.rs-picker-toggle:hover {border-color: $white !important;}

.password-input {
padding-right: 40px;
}

.password-input + .input-group-append {
position: absolute;
right: 0;
top: 0;
bottom: 0;
z-index: 3;
}

.password-input + .input-group-append .btn {
border-top-left-radius: 0;
border-bottom-left-radius: 0;
margin-left: -1px;
background: transparent;
border: 0;
}

.password-input + .input-group-append .btn:active {
background: transparent;
}

.wrapper {
display: grid;
grid-template-columns: repeat(2, 1fr);
grid-auto-rows: minmax(auto, auto);
column-gap: 15px;
}

.wrapper-child-left{
grid-column: 1;
grid-row: 1 / 3;
}

.wrapper-child-right-1 {
grid-column: 2;
grid-row: 1;
}

.wrapper-child-right-2 {
grid-column: 2;
grid-row: 2;
}

.svg-warning {
  fill: red !important;
  animation: warning 0.5s infinite alternate;
}

@keyframes warning {
  from {
    opacity: 1;
  }
  to {
    opacity: 0;
  }
}

.mapboxgl-canvas {
  width: 100% !important;
  height: 100% !important;
}

.content {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

.content > *:last-child {
  margin-top: auto !important;
}

.blank-page-image-container {
  position: fixed;
  bottom: 20px;
  z-index: -1;
}

.form-row > .col-6.col-sm-3 {
  flex: 0 0 auto !important;
  width: auto !important;
  max-width: 100% !important;
}

.col-6.col-sm-3 .rs-picker-daterange,
.col-6.col-sm-3 .rs-picker-daterange .rs-date-range-input.rs-input {
  min-width: 22rem !important;
}

#comparisonType.custom-select,
#periodType.custom-select {
  display: block !important;
  width: 8rem !important;
  padding-right: 1.75rem !important;
}

.col-6.col-sm-3 > .form-group > input.form-control-sm[readonly] {
  min-width: 14rem;
}

